fix style: body container height overflow

--- a/style.css
+++ b/style.css
@@ -169,8 +169,4 @@ li span {
     .task-checkbox {
         flex-shrink: 0;
     }
-
-    body {
-        height: 50vh;
-    }
 }
